sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: identifier expected but integer literal found.
  var i:Int=-1
             ^