sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i:Int=-1
  val valeurs:Int=getNombreValeurs()-1
  while(i< valeurs){



    if(plusPetit(i,i+1)){
      i=i+1
    }
    if (i==0){
      i=1
    }
    if(!plusPetit(i,i+1)){
      echange(i,i+1)
      i=i-1
    }
  }
}